fix the main overflowing body, grid rows must not be explicitly set

--- a/style.css
+++ b/style.css
@@ -53,11 +53,12 @@ table {
 
 body {
     margin: 0;
-    min-height: 100vh;
 
     display: grid;
     grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr 5fr;
+
+    min-height: 100vh;
 }
 
 #sidebar {
@@ -66,7 +67,7 @@ body {
     padding: 0.5rem;
 
     display: grid;
-    grid-template-rows: 1fr 3fr 3fr;
+    grid-template-rows: 1fr repeat(2, 3fr);
     gap: 1rem;
 }
 
@@ -125,7 +126,6 @@ main {
     background-color: bisque;
     display: grid;
     grid-template-columns: 3fr 1fr;
-    grid-template-rows: repeat(2, 1fr);
     gap: 1rem;
 }
 
@@ -150,4 +150,9 @@ main {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+
+.announcement, 
+.trending-card {
+    max-width: 50ch;
 }
